--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "author": "Damien Cassou",
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "lint:js": "eslint .",
+    "lint:js": "eslint",
     "test": "node --test"
   },
   "devDependencies": {
+    "@eslint/js": "^9.7.0",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^0.13.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.0.0",
     "prettier": "^3.3.3"
